--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.52.0",
+    "svelte-multiselect": "^8.2.1",
     "vite": "^3.2.3"
   },
   "dependencies": {
