--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "node-sass": "^8.0.0",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
+    "sass": "^1.57.1",
     "svelte": "^3.52.0",
     "svelte-multiselect": "^8.2.1",
+    "svelte-preprocess": "^5.0.0",
     "vite": "^3.2.3"
   },
   "dependencies": {
     "@observablehq/plot": "^0.6.0",
     "arquero": "^5.1.0",
-    "country-locale-map": "^1.8.11"
+    "country-locale-map": "^1.8.11",
+    "svelte-select": "^5.0.1"
   }
 }
