--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
+    "@types/d3": "^7.4.0",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -27,6 +28,7 @@
     "@observablehq/plot": "^0.6.0",
     "arquero": "^5.1.0",
     "country-locale-map": "^1.8.11",
+    "d3": "^7.8.0",
     "svelte-select": "^5.0.1"
   }
 }
