--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
     "sass": "^1.57.1",
     "svelte": "^3.52.0",
     "svelte-multiselect": "^8.2.1",
-    "svelte-preprocess": "^5.0.0",
+    "svelte-preprocess": "^5.0.1",
     "vite": "^3.2.3"
   },
   "dependencies": {
     "@observablehq/plot": "^0.6.0",
+    "@sveltejs/svelte-scroller": "^2.0.7",
     "arquero": "^5.1.0",
     "country-locale-map": "^1.8.11",
     "d3": "^7.8.0",
-    "svelte-select": "^5.0.1"
+    "svelte-select": "^5.0.1",
+    "yarn": "^1.22.19"
   }
 }
