--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "country-locale-map": "^1.8.11",
     "d3": "^7.8.0",
     "svelte-select": "^5.0.1",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "yootils": "^0.3.1"
   }
 }
